Chapter06/SalesforceEinsteinVision/src/objects/Error_Log__c.object
<CustomObject>
    <description>This shows the Error log</description>
    <fields>
        <fullName>Einstein_Vision_Dataset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einstein Vision Dataset</label>
        <referenceTo>Einstein_Vision_Dataset__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DATASET CREATION</fullName>
                </value>
                <value>
                    <fullName>TRAINING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>